# guandanSDK

./: README.md
benchmark/: README.md  benchmark.py  config.yaml.example
documents/bots/: README.md  bot_development_guideline.md  bot_development_spec.md  bot_registration_api.md
guandan_bot/: README.md  pubspec.yaml
guandan_bot/config/: config.yaml.example
guandan_bot/lib/: guandan_bot.dart
guandan_bot/test/: bot_registry_contract_test.dart  http_test_bot_test.dart  websocket_test_bot_test.dart
guandan_core/: build.yaml  pubspec.yaml
guandan_core/lib/: builder.dart  guandan_core.dart
guandan_core/test/: find_and_canbeat_test.dart  game_state_test.dart  model_utility_test.dart  player_joined_room_message_test.dart  player_profile_refactor_test.dart  player_test.dart  poker_card_test.dart
guandan_hand_splitter/: CHANGELOG.md  README.md  pubspec.yaml
guandan_hand_splitter/lib/: guandan_hand_splitter.dart
py_guandan/: README.md  benchmark.py  demo.py  pyproject.toml  setup.py
py_guandan/examples/: minimal_bot.py  start_test_game.py
py_guandan/guandan_benchmark/: __init__.py  __main__.py  client.py  config.py  config.yaml.example  display.py  monitor.py  runner.py  tracker.py
py_guandan/guandan_bot/: __init__.py  application.py  bot.py  deployment.py  http.py  protocol.py  test_game.py  websocket.py
py_guandan/guandan_core/: __init__.py  cards.py  game_room.py  game_state.py  hand_validator.py  message.py  player.py  utility.py
py_guandan/py_guandan/: __init__.py
py_guandan/py_guandan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py_guandan/tests/: test_bot_sdk.py  test_dart_crosscheck.py  test_find_and_canbeat_parity.py  test_game_state_parity.py  test_message_parity.py  test_model_utility_parity_existing.py  test_models.py  test_player_parity.py  test_poker_card_parity.py  test_python_specific.py
(+22 files in other folders)
