[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-guandan"
version = "0.1.0"
description = "Python port of the guandan_core Dart package."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Guandan contributors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["guandan_core*", "py_guandan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
