[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-guandan"
version = "0.2.0"
description = "Python Guandan core rules and bot development SDK."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Guandan contributors" }]

[project.optional-dependencies]
websocket = ["websockets>=11"]
benchmark = ["requests>=2", "pyyaml>=6"]
dev = ["pytest>=7", "websockets>=11", "requests>=2", "pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["guandan_core*", "guandan_bot*", "py_guandan*", "guandan_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
